--- a/Baza danych rehabilitacji/Baza danych rehabilitacji/Baza danych rehabilitacji.csproj
+++ b/Baza danych rehabilitacji/Baza danych rehabilitacji/Baza danych rehabilitacji.csproj
@@ -57,6 +57,7 @@
     </ApplicationDefinition>
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Models\Address.cs" />
+    <Compile Include="Models\PatientList.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Views\PatientList.xaml.cs">
       <DependentUpon>PatientList.xaml</DependentUpon>
